# project-aurum

./: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.config.ts
wasm/: Cargo.toml
wasm/src/: lib.rs  logging.rs
wasm/src/angular_slice/: mod.rs
wasm/src/canvas_point/: canvas_point_from_float_tuple.rs  mod.rs
wasm/src/contiguous_shape/: contiguous_shape_builder.rs  contiguous_shape_builder_from_stroke_batch.rs  contiguous_shape_from_contiguous_shape_builder.rs  contiguous_shape_from_stroke_kind.rs  mod.rs
wasm/src/contiguous_shape/builder/: anonymous_lifetime_impls.rs  contiguous_shape_builder_from_stroke_batch.rs  contiguous_shape_from_contiguous_shape_builder.rs  mod.rs  named_lifetime_impls.rs
wasm/src/contiguous_shape/contiguous_shape_builder/: anonymous_lifetime_impls.rs  contiguous_shape_builder_from_arc_builder.rs  contiguous_shape_builder_from_bezier_curve_builder.rs  contiguous_shape_builder_from_stroke_batch.rs  mod.rs  named_lifetime_impls.rs
wasm/src/enums/: mod.rs  stroke_cap.rs  stroke_kind.rs  stroke_style.rs  stroke_width.rs
wasm/src/enums/intersect_type/: intersect_resolver_from_intersect_type.rs  mod.rs
wasm/src/macros/: convex_polygon.rs  logging.rs  mod.rs
wasm/src/shape_config/: mod.rs
wasm/src/shape_segment/: mod.rs  shape_segment_from_canvas_point.rs
wasm/src/stroke_batch/: contiguous_shape_builder_from_stroke_batch.rs  mod.rs  stroke_batch_from_contiguous_shape.rs  stroke_batch_from_render_context.rs
wasm/src/stroke_config/: mod.rs
wasm/src/types/: intersect_resolver.rs  mod.rs
(+9 files in other folders)
