[package]
name = "wasm-tgfta"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2.8", features = ['js'] }
js-sys = "*"
wasm-bindgen = "*"
web-sys = { version = "*", features = ['CanvasRenderingContext2d', 'Document', 'Element', 'HtmlCanvasElement', 'Window'] }
